--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ supabase>=2.0.2       # Python client for Supabase (Postgres + auth + storage ba
 fastapi>=0.104.1      # High-performance Python web framework for building APIs
 uvicorn>=0.24.0       # ASGI server to run FastAPI apps (lightweight & fast)
 python-dotenv>=1.0.0  # Loads environment variables from a .env file for config management
+pydantic>=2.5.3       # Data validation (used by FastAPI)
+matplotlib>=3.8.2     # For plotting reports and insights
